--- a/stilo.css
+++ b/stilo.css
@@ -6,7 +6,7 @@ body,html{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(luffy.jpg) center center;
+    background: url(mine.jpg) center center;
     background-size: cover;
 
 }
